--- a/public/css/myCalendarStyle.css
+++ b/public/css/myCalendarStyle.css
@@ -172,15 +172,79 @@
 .span6 { width: 85.714285714285716%; }
 .span7 { width: 100%; }
 
+.col01 { left: 0%;
+         right: auto;
+}
 
-.order0 { top:   0px; }
-.order1 { top:  28px; }
-.order2 { top:  48px; }
-.order3 { top:  68px; }
-.order4 { top:  88px; }
-.order5 { top: 108px; }
-.order6 { top: 128px; }
-.order7 { top: 148px; }  /* ５件以上は「その他〇件 */
+.col02 { left: 12.5%;
+        right: auto;
+}
+
+.col03 { left: 25%;
+        right: auto;
+}
+
+.col04 { left: 37.5%;
+        right: auto;
+}
+
+.col05 { left: 50%;
+        right: auto;
+}
+
+
+.col06 { left: 62.5%;
+        right: auto;
+}
+
+.col07 { left: 75%;
+        right: auto;
+}
+
+.col08 { left: 87.5%;
+        right: auto;
+}
+
+.span01 { width: 12.5%; }
+.span02 { width: 25.0%; }
+.span03 { width: 37.5%; }
+.span04 { width: 50.0%; }
+.span05 { width: 62.5%; }
+.span06 { width: 75.0%; }
+.span07 { width: 87.5%; }
+.span08 { width: 100%;  }
+
+.order0  { top:   0px; }
+.order1  { top:  28px; }
+.order2  { top:  48px; }
+.order3  { top:  68px; }
+.order4  { top:  88px; }
+.order5  { top: 108px; }
+.order6  { top: 128px; }
+.order7  { top: 148px; }  /* 月表示は５件以上は「その他〇件 */
+.order8  { top: 168px; }
+.order9  { top: 188px; }
+.order10 { top: 208px; }
+.order11 { top: 228px; }
+.order12 { top: 248px; }
+.order13 { top: 268px; }
+.order14 { top: 288px; }
+.order15 { top: 308px; }
+.order16 { top: 328px; }
+.order17 { top: 348px; }
+.order18 { top: 368px; }
+.order19 { top: 388px; }
+.order20 { top: 408px; }  /* 週表示でもマックス３０件まで　それ以降はその他〇件　*/
+.order21 { top: 428px; }
+.order22 { top: 448px; }
+.order23 { top: 468px; }
+.order24 { top: 488px; }
+.order25 { top: 508px; }
+.order26 { top: 528px; }
+.order27 { top: 548px; }
+.order28 { top: 568px; }
+.order29 { top: 588px; }
+.order30 { top: 608px; }
 
 /*.container{ */
 /*    height: 18px;*/
@@ -208,7 +272,7 @@
 
 .date_item {
     cursor: pointer;
-    z-index: 50;
+    z-index: 99;
 }
 
 .calendar_item {
@@ -224,7 +288,7 @@
     -ms-content-zooming: none;
     overflow: hidden;
     cursor: pointer;
-    z-index: 51;
+    z-index: 99;
 }
 
 .schedule_time {
