--- a/public/css/myCalendarStyle.css
+++ b/public/css/myCalendarStyle.css
@@ -122,8 +122,8 @@
     width: 100%;
     height: 100%;
     border-color: black;
-    background-color: yellow;
-    border-color: black;
+    background-color: lightgray;
+    box-shadow: 3px 3px 5px 0px gray inset;
     z-index: 100;
 }
 
@@ -336,7 +336,7 @@
     -ms-content-zooming: none;
     overflow: hidden;
     cursor: pointer;
-    z-index: 100;
+    z-index: 99;
     pointer-events: auto;
 }
 
